--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-The *Effective Programming* static site!
+*Effective Programming* _Static_
 
 Code examples are MIT licensed. The rest of the content is my own.
 
